2005-01-27  Andy Wingo  <wingo@pobox.com>

	* flumotion/worker/checks/video.py (check1394): New bundled
	function, checks to see if dv1394 can go to PLAYING. Will fail if
	the user lacks the /dev/raw1394 entry.
	
	* flumotion/wizard/steps.py (FireWire): Add some checks to see if
	the firewire device really works.
	
	* flumotion/admin/gtk/wizard.py:
	* flumotion/wizard/wizard.py: Get theme colors the right way, by
	realizing the label first. 

	* data/glade/wizard_welcome.glade: The introductory text is not
	selectable.

	* data/glade/wizard_firewire.glade: Add a textview below the
	parameters for status information.

	* flumotion/admin/gtk/greeter.py (Authenticate)
	(ConnectToExisting): Grab focus to entries. Make enter go to the
	next entry if there is one.

2005-01-26  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/base.py:
	(ManagerAvatar.perspective_getBundleSums): New function, gets the
	sums of a bundle and dependencies.
	(ManagerAvatar.perspective_getBundleSumsByFile): First get the
	bundle name, then call getBundleSums.

	* flumotion/worker/checks/video.py: New file, contains the
	gstreamer checks that used to be in wizard.steps. Uses a nifty
	procedural abstraction, make_element_checker.

	* flumotion/worker/checks/package.xml: New file, registers
	flumotion.worker.checks.video as a bundle.
	
	* flumotion/worker/checks/__init__.py: New file, placates python.

	* flumotion/worker/worker.py:
	(WorkerMedium.setRemoteReference): Make a bundleloader when we get
	a remote reference.
	(WorkerMedium.remote_runCode): Removed, we don't run code
	fragments any more.
	(WorkerMedium.remote_runProc): New remoted procedure. Runs a
	function in a module, fetching the module from the manager as
	necessary.

	* flumotion/wizard/wizard.py (WizardStep.workerRun): Update to
	AdminModel's workerRun.

	* flumotion/wizard/steps.py: Move gstreamer checks to
	flumotion.worker.checks.video, and change to the new workerRun